// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
  ◼ This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ◼ This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ❯ This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ✔ This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ✔ This is an another subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  "[2K[1A[2K[G",
  "✔ This task will execute.
",
  "[?25h",
]
`;

exports[`default renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `[]`;

exports[`default renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute and not quit on errors.
",
  "[2K[1A[2K[G◼ This task will execute and not quit on errors.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ◼ This is a subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ◼ This is a subtask.
  ◼ This is an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ◼ This is a subtask.
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ❯ This is a subtask.
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ This is a subtask.
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ❯ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ◼ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ❯ This is yet an another subtask.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ❯ I have succeeded.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
◼ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
❯ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
✖ This task will execute.
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
✖ exit
",
  "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G",
  "⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
✖ exit
",
  "[?25h",
]
`;

exports[`default renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`default renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`default renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "[?25l",
  "◼ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
",
  "[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
",
  "[2K[1A[2K[1A[2K[G❯ This task will execute.
  ◼ This is a subtask.
  ◼ This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ❯ This is a subtask.
  ◼ This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ◼ This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ❯ This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute.
  ✔ This is a subtask.
  ✔ This is a subtask.
",
  "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
",
  "[2K[1A[2K[G",
  "✔ This task will execute.
",
  "[?25h",
]
`;

exports[`simple renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`simple renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`simple renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "❯ This task will execute.
",
  "❯ This is a subtask.
",
  "❯ This is an another subtask.
",
  "✔ This is an another subtask.
",
  "✔ This is a subtask.
",
  "✔ This task will execute.
",
]
`;

exports[`simple renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`simple renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `
[
  "✖ This is a subtask. [FAILED: I have failed [0]]
",
  "✖ This is an another subtask. [FAILED: I have failed [1]]
",
  "✖ This task will execute. [FAILED: exit]
",
]
`;

exports[`simple renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "❯ This task will execute and not quit on errors.
",
  "❯ This is a subtask.
",
  "❯ This is an another subtask.
",
  "❯ This is yet an another subtask.
",
  "✔ I have succeeded.
",
  "✔ This task will execute and not quit on errors.
",
  "❯ This task will execute.
",
]
`;

exports[`simple renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`simple renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`simple renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "❯ This task will execute.
",
  "❯ This is a subtask.
",
  "✔ This is a subtask.
",
  "❯ This is a subtask.
",
  "✔ This is a subtask.
",
  "✔ This task will execute.
",
]
`;

exports[`test renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`test renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`test renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This is a subtask.","hasFinalized":false}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This is an another subtask.","hasFinalized":false}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This is an another subtask.","hasFinalized":true}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This is a subtask.","hasFinalized":true}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This task will execute.","hasFinalized":true}}
",
]
`;

exports[`test renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`test renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `
[
  "{"event":"MESSAGE","data":{"error":"I have failed [0]"},"task":{"title":"This is a subtask.","hasFinalized":true}}
",
  "{"event":"MESSAGE","data":{"error":"I have failed [1]"},"task":{"title":"This is an another subtask.","hasFinalized":true}}
",
  "{"event":"MESSAGE","data":{"error":"exit"},"task":{"title":"This task will execute.","hasFinalized":true}}
",
]
`;

exports[`test renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will execute and not quit on errors.","hasFinalized":false}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This is a subtask.","hasFinalized":false}}
",
  "{"event":"STATE","data":"FAILED","task":{"title":"This is a subtask.","hasFinalized":true}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This is an another subtask.","hasFinalized":false}}
",
  "{"event":"STATE","data":"FAILED","task":{"title":"This is an another subtask.","hasFinalized":true}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This is yet an another subtask.","hasFinalized":false}}
",
  "{"event":"TITLE","data":"I have succeeded.","task":{"title":"I have succeeded.","hasFinalized":false}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"I have succeeded.","hasFinalized":true}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This task will execute and not quit on errors.","hasFinalized":true}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"FAILED","task":{"title":"This task will execute.","hasFinalized":true}}
",
]
`;

exports[`test renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`test renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`test renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "{"event":"STATE","data":"STARTED","task":{"title":"This task will execute.","hasFinalized":false}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This is a subtask.","hasFinalized":false}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This is a subtask.","hasFinalized":true}}
",
  "{"event":"STATE","data":"STARTED","task":{"title":"This is a subtask.","hasFinalized":false}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This is a subtask.","hasFinalized":true}}
",
  "{"event":"STATE","data":"COMPLETED","task":{"title":"This task will execute.","hasFinalized":true}}
",
]
`;

exports[`verbose renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-exit 1`] = `[]`;

exports[`verbose renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stderr 1`] = `[]`;

exports[`verbose renderer: show subtasks should be able to change concurrency setting in subtask, second subtask should finish first: 3ygUxrTkCDLDfDrXzF1ocWR6626jaL0k-stdout 1`] = `
[
  "[STARTED] This task will execute.
",
  "[STARTED] This is a subtask.
",
  "[STARTED] This is an another subtask.
",
  "[COMPLETED] This is an another subtask.
",
  "[COMPLETED] This is a subtask.
",
  "[COMPLETED] This task will execute.
",
]
`;

exports[`verbose renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-exit 1`] = `[]`;

exports[`verbose renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stderr 1`] = `
[
  "[FAILED] I have failed [0]
",
  "[FAILED] I have failed [1]
",
  "[FAILED] exit
",
]
`;

exports[`verbose renderer: show subtasks should be able to change exit on error: 12ttDlnth5pr1YuJEnfXm3I2CzRbcFlY-stdout 1`] = `
[
  "[STARTED] This task will execute and not quit on errors.
",
  "[STARTED] This is a subtask.
",
  "[STARTED] This is an another subtask.
",
  "[STARTED] This is yet an another subtask.
",
  "[TITLE] I have succeeded.
",
  "[COMPLETED] I have succeeded.
",
  "[COMPLETED] This task will execute and not quit on errors.
",
  "[STARTED] This task will execute.
",
]
`;

exports[`verbose renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-exit 1`] = `[]`;

exports[`verbose renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stderr 1`] = `[]`;

exports[`verbose renderer: show subtasks should create a set of subtasks: JQYWVb3x1scokQK2IzhwA4F0qxWbYzXR-stdout 1`] = `
[
  "[STARTED] This task will execute.
",
  "[STARTED] This is a subtask.
",
  "[COMPLETED] This is a subtask.
",
  "[STARTED] This is a subtask.
",
  "[COMPLETED] This is a subtask.
",
  "[COMPLETED] This task will execute.
",
]
`;
